# triton-c-api-test

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  main.cpp  server_wrapper.cc  tracer.cc  utils.cc
include/triton/utils/: infer_requested_output.h  server_wrapper.h  tracer.h  types.h
